--- a/src/styles/shipPlacement.css
+++ b/src/styles/shipPlacement.css
@@ -26,7 +26,7 @@
     width: 200px;
     height: 600px;
 }
-.ship-talbe-row {
+.ship-table-row {
     width: 100%;
     height: 100%;
 }
@@ -40,4 +40,7 @@
 .ship-placed-on-grid {
     background: green;
     cursor: not-allowed;
+}
+.ship-highlight {
+    border-bottom: 3px solid #6eff3e;
 }
