Add media query for screen size lower than or equal to 1024x900px

--- a/src/styles/shipPlacement.css
+++ b/src/styles/shipPlacement.css
@@ -49,3 +49,49 @@
     left: 40%;
     top: 894px;
 }
+
+/* Styles for screen lower than or equal to 1024x900 */
+@media screen and (max-width: 1024px) and (max-height: 900px) {
+    .container {
+        width: 450px;
+        height: 450px;
+    }
+    .ship-table {
+        width: 140px;
+        height: 485px;
+    }
+    .button {
+        left: 37%;
+        top: 612px;
+        padding: 15px 30px;
+        font-size: 30px;
+    }
+}
+@media screen and (max-height: 768px) {
+    .container {
+        width: 400px;
+        height: 400px;
+    }
+    .ship-table {
+        width: 130px;
+        height: 452px;
+    }
+    .button {
+        left: 39%;
+        top: 540px;
+        padding: 10px 20px;
+        font-size: 20px;
+    }
+    .button span:nth-child(1) {
+        left: -40px;
+    }
+    .button span:nth-child(2) {
+        top: -40px;
+    }
+    .button span:nth-child(3) {
+        right: -40px;
+    }
+    .button span:nth-child(4) {
+        bottom: -40px;
+    }
+}
