Add the logic to attack the robot ship by player and robot will attack correspondingly

--- a/src/styles/mainGame.css
+++ b/src/styles/mainGame.css
@@ -25,3 +25,15 @@
     font-size: 41px;
     padding: 22px 22px;
 }
+.pre-attack-hover {
+    background: green;
+}
+.grid-pointer {
+    cursor: crosshair;
+}
+.attack-miss {
+    background: wheat;
+}
+.attack-hit {
+    background: red;
+}
