--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -124,12 +124,14 @@
     letter-spacing: 0.1rem;
     transition: 0.5s;
     z-index: 1;
+    cursor: pointer;
 }
 
 .button:hover {
     color: #fff;
     border: 2px solid rgba(0, 0, 0, 0);
     box-shadow: 0 0 0px var(--color);
+    cursor: pointer;
 }
 
 .button::before {
