Made a functionality to show on board when a player sunk a ship of robot.

--- a/src/styles/mainGame.css
+++ b/src/styles/mainGame.css
@@ -33,7 +33,13 @@
 }
 .attack-miss {
     background: wheat;
+    cursor: not-allowed;
 }
 .attack-hit {
     background: red;
+    cursor: not-allowed;
+}
+.ship-has-sunk {
+    background: lightskyblue;
+    cursor: not-allowed;
 }
